--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -77,15 +77,15 @@
             android:clickable="true"
             android:text="@string/skip" />
 
-        <ProgressBar
-            android:id="@+id/progressBarMainScreen"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/login_user"
-            android:layout_alignLeft="@+id/login_user"
-            android:layout_alignRight="@+id/login_user"
-            android:indeterminate="true" />
+<!--         <ProgressBar -->
+<!--             android:id="@+id/progressBarMainScreen" -->
+<!--             style="?android:attr/progressBarStyleHorizontal" -->
+<!--             android:layout_width="wrap_content" -->
+<!--             android:layout_height="wrap_content" -->
+<!--             android:layout_above="@+id/login_user" -->
+<!--             android:layout_alignLeft="@+id/login_user" -->
+<!--             android:layout_alignRight="@+id/login_user" -->
+<!--             android:indeterminate="true" /> -->
                </RelativeLayout>
 
 </ScrollView>
