--- a/Shoppier/res/layout/add_list.xml
+++ b/Shoppier/res/layout/add_list.xml
@@ -26,14 +26,6 @@
            android:layout_marginBottom="42dp"
            android:text="@string/list_name" />
 
-       <ImageButton
-           android:id="@+id/but_add_list"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_alignRight="@+id/list_name"
-           android:layout_centerVertical="true"
-           android:src="@android:drawable/ic_input_add" />
-
        <Spinner
            android:id="@+id/newlist_storespinner"
            android:layout_width="wrap_content"
@@ -41,5 +33,14 @@
            android:layout_alignLeft="@+id/list_name"
            android:layout_alignRight="@+id/list_name"
            android:layout_below="@+id/list_name" />
+
+       <ImageButton
+           android:id="@+id/but_add_list"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_below="@+id/newlist_storespinner"
+           android:layout_centerHorizontal="true"
+           android:layout_marginTop="15dp"
+           android:src="@android:drawable/ic_input_add" />
 
 </RelativeLayout>
